--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["test", "test"],
     "type": "project",
     "license":"MIT",
+    "version":"1.0.0",
     "require": {
         "php": ">=5.5.9"
     },
