--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dreammaker008/onetest",
+    "name": "component/trait",
     "description": "The first project on github.",
     "keywords": ["test", "test"],
     "type": "project",
